breaking: partly implemented propauth

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -14,7 +14,7 @@
     "active_team_checkbox_label": "This team is active",
     "active_teams_checkbox_label": "These teams are active",
     "add_court_title": "Add Court",
-    "add_player_button": "Add Player",
+    "add_player_button": "Add Tournament-Player",
     "add_round_button": "Add Round",
     "add_stage_button": "Add Stage",
     "add_stage_item_modal_title": "Add Stage Item",
@@ -31,12 +31,12 @@
     "back_to_login_nav": "Back to login page",
     "checkbox_status_checked": "Checked",
     "checkbox_status_unchecked": "Unchecked",
-    "club_choose_title": "Please choose a club",
+    "club_choose_title": "Please choose a mini-league",
     "club_name_input_placeholder": "Best Club Ever",
-    "club_select_label": "Club",
-    "club_select_placeholder": "Pick a club for this tournament",
+    "club_select_label": "Mini-League",
+    "club_select_placeholder": "Attach tournament to a mini-league",
     "clubs_spotlight_description": "View, add or delete clubs",
-    "clubs_title": "clubs",
+    "clubs_title": "Mini-leagues",
     "copied_dashboard_url_button": "Copied Dashboard URL",
     "copy_dashboard_url_button": "Copy Dashboard URL",
     "could_not_find_any_alert": "Could not find any",
@@ -47,7 +47,7 @@
     "create_account_alert_title": "Unavailable",
     "create_account_button": "Create Account",
     "create_account_title": "Create a new account",
-    "create_club_button": "Create Club",
+    "create_club_button": "Create Mini-League",
     "create_court_button": "Create Court",
     "create_demo_account_title": "Create demo account",
     "create_player_modal_title": "Create Player",
@@ -63,7 +63,7 @@
     "dashboard_public_description": "Allow anyone to see the dashboard of rounds and matches",
     "dashboard_settings_title": "Dashboard Settings",
     "delete_button": "Delete",
-    "delete_club_button": "Delete Club",
+    "delete_club_button": "Delete mini-league",
     "delete_court_button": "Delete Court",
     "delete_player_button": "Delete Player",
     "delete_round_button": "Delete Round",
@@ -77,7 +77,7 @@
     "dropzone_idle_text": "Upload Logo",
     "dropzone_reject_text": "Image must be less than 5MB.",
     "duration_minutes_choose_title": "Please choose a duration of the matches",
-    "edit_club_button": "Edit Club",
+    "edit_club_button": "Edit mini-league",
     "edit_details_tab_title": "Edit details",
     "edit_match_modal_title": "Edit Match",
     "edit_name_button": "Edit Name",
