--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -15,6 +15,7 @@
     "active_teams_checkbox_label": "These teams are active",
     "add_court_title": "Add Court",
     "add_player_button": "Add Tournament-Player",
+    "add_players_from_mini_league_button": "Add Players from Mini-League",
     "add_round_button": "Add Round",
     "add_stage_button": "Add Stage",
     "add_stage_item_modal_title": "Add Stage Item",
@@ -101,6 +102,7 @@
     "github_title": "Github",
     "home_spotlight_description": "Get to home page",
     "home_title": "Home",
+    "import_players_from_mini_league_modal_title": "Import players from Mini-League",
     "inactive": "Inactive",
     "invalid_email_validation": "Invalid email",
     "invalid_password_validation": "Invalid password",
